--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +13,7 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "@whiskeysockets/baileys": "^6.17.16",
     "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.1",
@@ -29,6 +31,8 @@
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.10.0",
+    "pino": "^8.21.0",
+    "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   }
