--- a/auth_info_baileys/app-state-sync-key-AAAAAPSz.json
+++ b/auth_info_baileys/app-state-sync-key-AAAAAPSz.json
@@ -1,1 +1,1 @@
-{"keyData":"lGa3OORV18AByyZAonmccppAFovSi00bnD2dubCrA0Y=","fingerprint":{"rawId":537682645,"currentIndex":1,"deviceIndexes":[0,1]},"timestamp":"1743956868923"}
+{"keyData":"lGa3OORV18AByyZAonmccppAFovSi00bnD2dubCrA0Y=","fingerprint":{"rawId":537682645,"currentIndex":1,"deviceIndexes":[0,1]},"timestamp":"0"}
